# github-actions-example

.github/workflows/: build-project.yml  test-project.yml
src/: CMakeLists.txt  test_add.cc  test_sub.cc
src/lib/: add.hpp  sub.hpp
